<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.netron90.correction.personnalize.MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"></android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/toolbar">
        <RelativeLayout
            android:id="@+id/bloc_facture"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="45"
            android:background="@color/colorPrimary"
            >
            <RelativeLayout
                android:id="@+id/icon_doc_accepted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_detail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_insert_drive_file_black_document_24dp"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/doc_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="RAPPORT DE SOUTENANCE"
                android:layout_marginTop="12dp"
                android:layout_below="@id/icon_doc_accepted"
                android:layout_centerHorizontal="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorWhite"/>
            <RelativeLayout
                android:id="@+id/bar_total"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorWhite"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_below="@id/doc_title"
                android:layout_marginTop="8dp"
                ></RelativeLayout>
            <TextView
                android:id="@+id/text_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Document facture a"
                android:layout_below="@id/bar_total"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="6dp"
                android:textColor="@color/colorWhite"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
            <TextView
                android:id="@+id/montant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1600 fCFA"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_below="@id/text_total"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/colorWhite"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="55">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="20dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="@dimen/cardview_default_elevation"
                app:cardCornerRadius="@dimen/cardview_default_radius"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <RelativeLayout
                        android:id="@+id/block_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="Nombre de page:"
                            android:textAppearance="@style/TextAppearance.AppCompat.Tooltip" />
                        <TextView
                            android:id="@+id/doc_page"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="15 pages"
                            android:layout_centerVertical="true"
                            android:textStyle="bold"
                            android:textColor="@color/colorDarkhBlack"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="12dp"
                            />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/bar_doc_name"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/block_details"
                        android:background="@color/colorLigthBlack"></RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/block_complement3"
                        android:layout_below="@id/bar_doc_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:layout_marginTop="12dp">
                        <TextView
                            android:id="@+id/date_select_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/detail_select_date_desc"
                            android:layout_marginLeft="12dp"
                            android:textColor="@color/colorDarkhBlack"
                            android:textSize="16sp"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/date_select"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:text="@string/detail_select_date"
                            android:textColor="@color/colorAccent"
                            android:layout_marginRight="12dp"/>

                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/block_complement1"
                        android:layout_below="@id/block_complement3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp">
                        <android.support.v7.widget.AppCompatCheckBox
                            android:id="@+id/checkBox_msPage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="8dp"
                            android:layout_marginLeft="12dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:text="@string/detail_activity_mise_en_page"
                            android:layout_marginRight="12dp"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/block_complement2"
                        android:layout_below="@id/block_complement1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp">
                        <android.support.v7.widget.AppCompatCheckBox
                            android:id="@+id/checkBox_power_point"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="8dp"
                            android:layout_marginLeft="12dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:text="@string/detail_activity_power_point"
                            android:layout_marginRight="12dp"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/block_complement4"
                        android:layout_below="@id/block_complement2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp">
                        <TextView
                            android:id="@+id/payement_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/detail_activity_mode"
                            android:layout_marginLeft="12dp"/>
                        <Switch
                            android:id="@+id/mode_payement"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="12dp"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </ScrollView>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/block_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="16dp">
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/send_document"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:fab_icon="@drawable/ic_send_white_24dp"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccentDark"
            />
    </RelativeLayout>

</RelativeLayout>
