<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="4dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--<RelativeLayout-->
                <!--android:id="@+id/block_delete_doc"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:layout_margin="4dp"-->
                <!--android:background="?attr/selectableItemBackground"-->
                <!--android:clickable="true"-->
                <!--android:focusable="true"-->
                <!--android:padding="4dp">-->
                <!--<ImageView-->
                    <!--android:id="@+id/delete_doc"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="@drawable/ic_assignment_turned_in_black_24dp"/>-->
            <!--</RelativeLayout>-->
            <RelativeLayout
                android:id="@+id/bloc1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/block_delete_doc"
                android:layout_marginTop="8dp"
                android:padding="8dp">

                <TextView
                    android:id="@+id/document_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="NOM DU DOCUMENT"
                    android:textColor="@color/colorText"
                    android:maxLength="16"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    />
                <TextView
                    android:id="@+id/document_pages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/document_name"
                    android:text="15 pages"
                    android:layout_alignParentRight="true"
                    android:gravity="right"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:textSize="14sp"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/bar_spli_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/bloc1"
                android:layout_marginTop="8dp"
                android:background="@color/colorText"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"></RelativeLayout>
            <RelativeLayout
                android:id="@+id/block2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bar_spli_1"
                android:layout_marginTop="2dp"
                android:padding="8dp">
                <TextView
                    android:id="@+id/text_option_power_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/power_point_option"
                    android:layout_marginLeft="16dp"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/switch_power_point_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/text_option_power_point"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:gravity="right"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/block3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/block2"
                android:layout_marginTop="2dp"
                android:padding="8dp">
                <TextView
                    android:id="@+id/text_option_mise_en_forme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mise_en_forme_option"
                    android:layout_marginLeft="16dp"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/switch_mise_en_forme_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/text_option_mise_en_forme"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:gravity="right"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/block4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/block3"
                android:layout_marginTop="2dp"
                android:padding="8dp">
                <TextView
                    android:id="@+id/text_option_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_date"
                    android:layout_marginLeft="16dp"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/text_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/text_option_date"
                    android:layout_alignParentRight="true"
                    android:gravity="right"
                    android:layout_marginRight="16dp"
                    android:text="@string/no_date_selected"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/bar_spli_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/block4"
                android:layout_marginTop="8dp"
                android:background="@color/colorText">

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bar_spli_2"
                android:padding="4dp">
                <RelativeLayout
                    android:id="@+id/doc_ready_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="10dp">
                    <ImageView
                        android:id="@+id/icon_doc_ready"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_done_doc_ready_off_24dp"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/doc_paid_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:padding="10dp"
                    android:layout_toRightOf="@id/doc_ready_layout">
                    <ImageView
                        android:id="@+id/icon_doc_paid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_attach_money_off_24dp"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/start_discussion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:padding="10dp"

                    android:layout_alignParentRight="true">

                    <ImageView

                        android:id="@+id/icon_chat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_chat_off_24dp"

                        />
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>